--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://kit.fontawesome.com/7501c3651b.js" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <title>CarApp</title>
   <base href="/">
